# enjoin

./: Cargo.toml  README.md
external_tests/: Cargo.toml
external_tests/src/: lib.rs
macros/: Cargo.toml
macros/src/: awaits.rs  breaks.rs  captures.rs  lib.rs  trys.rs
src/: lib.rs
tests/: basic_join.rs  basic_race.rs  basic_try_join.rs  basic_try_race.rs  disjoint_capture.rs  escape_labeled.rs  escape_unlabeled.rs  ignore_immut.rs  ignore_shadowed_label.rs  ignore_shadowed_var.rs  interleaved.rs  questionmark.rs  sample_expansion.rs  shared_mut.rs  tests.rs  utils.rs
tests/compile-fail-tests/: Cargo.toml
tests/compile-fail-tests/src/: lib.rs
