[package]
name = "enjoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enjoin_macro = { version = "0.1", path = "./macros/" }

[dev-dependencies]
pollster = { version = "0.3.0", features = ["macro"] }

[workspace]
members = [
	"macros/",
	"tests/compile-fail-tests/"
]