[package]
name = "enjoin_macro"
version = "0.2.0"
edition = "2021"
description = "Macros for the enjoin crate"
license = "MPL-2.0"
repository = "https://github.com/wishawa/enjoin"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["visit", "visit-mut", "full"] }
